--- a/Week01/hello.html
+++ b/Week01/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         Hello, world! 
-        <h1>Test</h1>
-        <h2>Test2</h2>
+        <h1>Test.</h1>
+        <h2>Test2.</h2>
     </body>
 </html>
